# python-ironcad

./: .gitignore  LICENSE  README.md  THRID_PARTY_LICENSES  pyproject.toml  register_instructions.txt  reqs.txt  tlbparser.py
.github/workflows/: release.yml
ironcad/: __init__.py  core.py  example.ipynb  gen_all.py  scratch.ipynb  scratch.py
notes/: IIronCADApp_help.txt  IPage_help.txt  all_interfaces_in_bin.txt  api.txt  apibase_int_and_coclass.txt
python_ironcad/: __init__.py  __main__.py  core.py  modified_tlbparser.py
python_ironcad.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
python_ironcad/test/: __init__.py  __main__.py  initilize_api.py  runall.py  scenetests.py  test_utils.py
samples/: assemble_tank.py  drop_block.py  generate_scenegraph.py  test.py
tests/: initilize_api.py  runall.py  scenetests.py  test_utils.py
