[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "python-ironcad"
version = "0.1.0"
description = "A Python module for IronCAD automation and scripting."
authors = [
    { name = "Nathan Vrieland", email = "nvrieland@ironcad.com" }
]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    # "License :: OSI Approved :: MIT License",  # Removed per setuptools warning
    "Operating System :: Windows"
]
dependencies = [
    "comtypes==1.4.16"
]

# Use SPDX license expression and restrict package discovery
license = "MIT"

[tool.setuptools.packages.find]
include = ["python_ironcad*"]

[project.urls]
Homepage = "https://github.com/IronCAD/python-ironcad"
