[build-system]
requires = ["setuptools>=61.0,<69"]
build-backend = "setuptools.build_meta"

[project]
name = "python_ironcad"
version = "v0.1.16"
description = "A Python module for IronCAD automation and scripting."
authors = [
    { name = "Nathan Vrieland", email = "nvrieland@ironcad.com" }
]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3"
]
dependencies = [
    "comtypes==1.4.16"
]

# Use SPDX license expression and restrict package discovery
license = { text = "MIT" }

[tool.setuptools.packages.find]
include = ["python_ironcad*"]

[project.urls]
Homepage = "https://github.com/IronCAD/python-ironcad"
